@@ -1,3 +1,7 @@
+2007-10-22  Robert Ancell  <robert.ancell@gmail.com>
+
+	* lib/glchess.py: Catch and ignore all exceptions writing to stdout (Bug #426461)
+
 2007-10-21  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Added tests/ dir containing PGN test files
